--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "laravel-vapor",
-  "title": "laravel-vapor",
+  "title": "Laravel Vapor",
   "description": "Interacts with Laravel Vapor API",
   "icon": "vapor.png",
   "author": "tcampbPPU",
