--- a/package.json
+++ b/package.json
@@ -10,36 +10,42 @@
     {
       "name": "switch-team",
       "title": "Switch Team",
+      "subtitle": "Laravel Vapor",
       "description": "Switch Active Team",
       "mode": "view"
     },
     {
       "name": "list-projects",
-      "title": "Projects",
+      "title": "Search Projects",
+      "subtitle": "Laravel Vapor",
       "description": "List projects for the current team",
       "mode": "view"
     },
     {
       "name": "list-databases",
-      "title": "Databases",
+      "title": "Search Databases",
+      "subtitle": "Laravel Vapor",
       "description": "List databases for the current team",
       "mode": "view"
     },
     {
       "name": "list-networks",
-      "title": "Networks",
+      "title": "Search Networks",
+      "subtitle": "Laravel Vapor",
       "description": "List networks for the current team",
       "mode": "view"
     },
     {
       "name": "list-domains",
-      "title": "Domains",
+      "title": "Search Domains",
+      "subtitle": "Laravel Vapor",
       "description": "List domains for the current team",
       "mode": "view"
     },
     {
       "name": "list-caches",
-      "title": "Caches",
+      "title": "Search Caches",
+      "subtitle": "Laravel Vapor",
       "description": "List caches for the current team",
       "mode": "view"
     }
